Wed Jan  7 12:35:41 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* lib/debug.rb: revert command parse regexps.  [ruby-list:39014] by
	  Shirai,Kaoru.

Wed Jan  7 08:21:04 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parserfactory.rb: Check for shebang
	  line in files that would otherwise be treated as
	  plain text.

Tue Jan  6 21:51:37 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (fptr_finalize): should save errno just after failure.
	  [ruby-dev:22492]

Tue Jan  6 20:51:10 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* lib/logger.rb(Logger#msg2str): no special treatment for the object
	  which responds to :to_str.

	* lib/logger.rb(LogDevice#initialize): remove type checking if the
	  given object is a String.  Kernel.open handles it correctly.

	* test/logger/test_logger.rb: follow above change (ArgumentError ->
	  TypeError.)

Tue Jan  6 14:53:14 2004  Dave Thomas  <dave@pragprog.com>

	* bin/ri: split out the display side, making it pluggable. Added
	  new ri_driver and ri_display files in lib/rdoc/ri.

Tue Jan  6 11:29:43 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* test/inlinetest.rb, test/{test_generator.rb,test_ipaddr.rb,
	  test_pathname.rb,test_pp.rb,test_prettyprint.rb,test_set.rb,
	  test_time.rb,test_tsort.rb: added.

Tue Jan  6 09:38:27 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* import soap4r/1.5.2;

	* lib/soap/{attachment.rb,baseData.rb,encodingstyle/soapHandler.rb}:
	  introduce SOAPExternalReference class as a referenct to SOAPEnvelope
	  external content.

	* lib/soap/{attachment.rb,mimemessage.rb}: great SwA (SOAP messages
	  with Attachments) support code by Jamie Herre.

	* lib/soap/{element.rb,marshal.rb,parser.rb,processor.rb,
	  streamHandler.rb,wsdlDriver.rb}: SwA support.

	* lib/soap/rpc/{cgistub.rb,driver.rb,element.rb,proxy.rb,router.rb,
	  soaplet.rb}: SwA support and refactoring.

	* lib/soap/generator.rb, lib/soap/mapping/mapping.rb: follow